--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Database setup
         run: |
-          bundle exec rake db:create
-          bundle exec rake db:migrate
+          bin/rails db:create
+          bin/rails db:migrate
         env:
           RAILS_ENV: test
           POSTGRES_USER: postgres
