--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,35 @@
 version: '3.9'
 
 services:
-  db:
+  postgres:
     image: postgres:14.5-alpine
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: 123456
+      PGDATA: /data/postgres
+    volumes:
+      - postgres:/data/postgres
+    ports:
+      - "5432:5432"
     networks:
       - postgres
 
-  web:
+  rails_guide:
     build: .
     volumes:
       - .:/app
+    image: rails_guide
+    container_name: rails_guide
     tty: true
     ports:
       - "3000:3000"
+    environment:
+      - DATABASE_NAME=app_development
+      - DATABASE_USERNAME=user
+      - DATABASE_PASSWORD=123456
+      - DATABASE_HOST=postgres
     depends_on:
-      - db
+      - postgres
     networks:
       - postgres
 
